# duckdb-gcs

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
src/: gcs_extension.cpp  gcs_filesystem.cpp  gcs_parsed_url.cpp  gcs_secret.cpp
src/include/: gcs_extension.hpp  gcs_filesystem.hpp  gcs_parsed_url.hpp  gcs_secret.hpp
test/cpp/: CMakeLists.txt  README.md  benchmark_large_file_reads.cpp  gcs_test_helper.hpp  test_cache_behavior.cpp  test_directory_operations.cpp  test_file_operations.cpp  test_generation_pinning.cpp  test_glob_operations.cpp  test_main.cpp
test/sql/: gcs_write.test  gcs_write_partitioned.test
